--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,6 +61,8 @@ contact: >
 
 projects:
 
+- {name: '', folder: '', file: '', cover: ''}
+
 
 
 
@@ -71,7 +73,7 @@ projects:
 #-------------------------------
 # Contact Section
 
-social:
+#social:
 #- {icon: 'envelope', link: 'mailto:#'}
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
