--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,7 @@ menu:
 # - {name: 'works', url: ''}
 #- {name: 'texts', url: 'pages/texts.html'}
 #- {name: 'about', url: 'pages/about.html'}
-#- {name: 'contact', url: 'pages/contact.html'}
+- {name: 'contact', url: 'pages/contact.html'}
 
 #-------------------------------
 # SEO Section
