committed by cx

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,6 @@ sass:
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 
-title:		           "小播客"
+title:		           "記得當時在喝飲料"
 description:	       ""
 author:              ""
