committed by cx

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,6 @@ sass:
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 
-title:		           "原始天皇巨星"
+title:		           "cx"
 description:	       ""
 author:              ""
